--- a/rent-car-app/src/Form/form.css
+++ b/rent-car-app/src/Form/form.css
@@ -16,7 +16,7 @@
     box-sizing: border-box;
     font-family: "Didact Gothic", sans-serif;
 }
-body{
+.bg-form{
     display: flex;
     justify-content: center;
     align-items: center;
