--- a/rent-car-app/src/Register/register.css
+++ b/rent-car-app/src/Register/register.css
@@ -6,7 +6,7 @@
   box-sizing: border-box;
 }
 
-#root{
+.bg-register{
   display: flex;
   justify-content: center;
   align-items: center;
@@ -16,7 +16,7 @@
   background-position: center;
 }
 
-.wrapper {
+.wrapper-register {
   width: 420px;
   background: transparent;
   border: 2px solid rgba(255,255,255,.2);
@@ -27,20 +27,20 @@
   padding:30px 40px;
 }
 
-.wrapper h1{
+.wrapper-register h1{
   font-size: 56px;
   text-align: center;
   font-family: Lobster ;
 }
 
-.wrapper .input-box {
+.wrapper-register .input-box-register {
   position: relative;
   width: 100%;
   height: 50px;
   margin: 30px 0;
 }
 
-.input-box input{
+.input-box-register input{
   width: 100%;
   height: 100%;
   background:transparent;
@@ -54,12 +54,12 @@
   padding: 20px 45px 20px 20px;
 }
 
-.input-box input::placeholder{
+.input-box-register input::placeholder{
   color: #fff;
 
 }
 
-.input-box i{
+.input-box-register i{
   position: absolute;
   right: 20px;
   top: 50%;
@@ -68,7 +68,7 @@
   
 }
 
-.wrapper .remember-forgot{
+.wrapper-register .remember-forgot{
   display: flex;
   justify-content: space-between;
   font-size: 14.5px;
@@ -89,7 +89,7 @@
 
 }
 
-.wrapper .btn{
+.wrapper-register .btn-register{
   width: 100%;
   height: 45px;
   background: #ffffffc9;
@@ -104,7 +104,7 @@
   font-family: Didact Gothic;
 }
 
-.wrapper .register-link{
+.wrapper-register .register-link{
   font-size: 14px;
   text-align: center;
   margin: 20px 0 15px ;
