--- a/rent-car-app/src/Form/form.css
+++ b/rent-car-app/src/Form/form.css
@@ -16,16 +16,16 @@
     box-sizing: border-box;
     font-family: "Didact Gothic", sans-serif;
 }
-body{
+body .bg-form {
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url('blue-bg.jpg') fixed ;
+    background: url('blue-bg.jpg') fixed;
     background-size: cover;
     background-position: center;
 }
-.wrapper{
+.wrapper-form{
     width: 650px;
     background-color:transparent;
     border: 2px solid rgba(255, 255, 255, .2);
@@ -35,18 +35,18 @@ body{
     border-radius: 10px;
     padding: 30px 40px;
 }
-.wrapper h1 {
+.wrapper-form h1 {
     font-size: 65px;
     text-align: center;
     font-family: 'Cookie', cursive;
 }
-.wrapper .input-box {
+.wrapper-form .input-box-form {
     width: 100%;
     height: 50px;
     margin: 10px 2px;
 
 }
-.input-box input {
+.input-box-form input {
     width: 100%;
     height: 100%;
     background: transparent;
@@ -58,15 +58,15 @@ body{
     color: #fff;
     padding: 20px 45px 20px 20px;
 }
-.input-box input::placeholder{
+.input-box-form input::placeholder{
     color: #fff;
 
 }
-.wrapper .set-col{
+.wrapper-form .set-col{
     display: flex;
     justify-content: space-between;
 }
-.wrapper .btn{
+.wrapper-form .btn-form{
     width: 100%;
     height: 45px;
     background-color: #6AD4DD;
@@ -80,7 +80,7 @@ body{
     font-weight: 600;
     margin-top: 15px;
 }
-.wrapper .selected{
+.wrapper-form .selected{
     width: 100%;
     height: 45px;
     border-radius: 40px;
@@ -89,8 +89,4 @@ body{
     border: 2px solid rgba(255, 255, 255, .2);
     padding: 0 0 0 20px;
     font-size: 16px;
-}
-
-.wrapper .selected .op{
-    font-family: "Didact Gothic", sans-serif;
 }
