--- a/rent-car-app/src/Home/home.css
+++ b/rent-car-app/src/Home/home.css
@@ -1,5 +1,8 @@
 .title{
-    color: aliceblue;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-size: 150px;
     font-family: 'Cookie';
 }
