--- a/rent-car-app/src/Login/login.css
+++ b/rent-car-app/src/Login/login.css
@@ -30,7 +30,7 @@
 .wrapper-login h1{
   font-size: 56px;
   text-align: center;
-  font-family: Lobster ;
+  font-family: Cookie ;
 }
 
 .wrapper-login .input-box-login {
