--- a/rent-car-app/src/Form/form.css
+++ b/rent-car-app/src/Form/form.css
@@ -40,6 +40,13 @@
     text-align: center;
     font-family: 'Cookie', cursive;
 }
+
+.wrapper-form h2{
+    font-size: 16px;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
 .wrapper-form .input-box-form {
     width: 100%;
     height: 50px;
@@ -69,7 +76,7 @@
 .wrapper-form .btn-form{
     width: 100%;
     height: 45px;
-    background-color: #6AD4DD;
+    background-color: #fff;
     border: none;
     outline: none;
     border-radius: 40px;
