--- a/rent-car-app/src/Navbar/navbar.css
+++ b/rent-car-app/src/Navbar/navbar.css
@@ -59,3 +59,43 @@
     width: 100%;
 
 }
+
+.header ul {
+    display: flex;
+    justify-content: space-between;
+    list-style-type: none;
+  }
+
+  .header ul li:not(:last-child) {
+    margin-right: 60px;
+  }
+
+  .header ul a {
+    font-size: 28px;
+    font-weight: 700;
+    color: #fff;
+    text-decoration: none;
+    font-family: LObster;
+  }
+  
+  .header ul a.active {
+    color: #fff;
+    font-weight: 700;
+    position: relative;
+  }
+  
+  .header ul a.active::after {
+    content: '';
+    position: absolute;
+    bottom: -4px;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: #fff;
+  }
+
+  .menu-item{
+    text-decoration: none;
+    color: #fff;
+    font-weight: 700;
+  }
