--- a/rent-car-app/src/Order/Order.css
+++ b/rent-car-app/src/Order/Order.css
@@ -7,6 +7,7 @@
 
 .order-wrap{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
@@ -16,17 +17,17 @@
 }
 
 .table_title{
-    margin-left: 50px;
-    margin-top: 20px;
     font-family: Cookie;
-    font-size: 50px;
+    font-size: 65px;
     font-weight: 900;
-    text-align:center;
+    color: aliceblue;
+    margin-bottom: 1rem;
 }
 
 .table_head{
     font-weight: 900;
     font-size: 24px;
+    color: aliceblue;
 
 }
 
