--- a/rent-car-app/src/Rules/rules.css
+++ b/rent-car-app/src/Rules/rules.css
@@ -20,18 +20,18 @@
 .title h1{
     color: #ffffff;
     text-align: center;
-    padding-top:100px;
-    font-size: 86px;
-    font-family: Lobster;
+    /* padding-top:10px; */
+    font-size: 50px;
+    font-family: 'Lobster';
 }
 
 .title h1::after{
     content: " ";
     height:4px;
-    width: 230px;
+    width: 120px;
     background-color: #fff;
     display: block;
-    margin:auto;
+    margin: 0 auto;
 }
 
 .services{
@@ -51,15 +51,15 @@
     align-items: center;
     flex-direction: column;
     margin: 0px 50px ;
-    padding:40px 30px;
-    background-color: #4f535a;
+    padding:40px 70px;
+    background-color: #436850;
     border-radius: 10px;
     cursor: pointer;
     transition: background-color 0.4s ease-out, transform 0.4s ease-out;
 }
 
 .card:hover{
-    background-color: #000;
+    background-color: #12372A;
     transform-style: preserve-3d;
     transform: translateY(-50px);
     transition: .4s ease-out ;
