--- a/rent-car-app/src/Rules/rules.css
+++ b/rent-car-app/src/Rules/rules.css
@@ -20,7 +20,7 @@
 .title h1{
     color: #ffffff;
     text-align: center;
-    /* padding-top:10px; */
+    padding-top:100px;
     font-size: 50px;
     font-family: 'Lobster';
 }
